metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: metrics
  name: metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: metrics
    spec:
      containers:
      - image: btwiuse/arch:ufo
        name: metrics
        ports:
        - containerPort: 3000
          hostPort: 303
          protocol: UDP
        - containerPort: 3000
          protocol: TCP
        command:
        - bash
        - -c
        args: 
        - |
          ufo station
        volumeMounts:
        - mountPath: /tls
          name: tls
      restartPolicy: Always
      volumes:
      - secret:
          secretName: metrics.k0s.io
        name: tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: metrics.k0s.io
spec:
  rules:
  - host: metrics.k0s.io
    http:
      paths:
      - backend:
          service:
            name: metrics
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  - host: '*.metrics.k0s.io'
    http:
      paths:
      - backend:
          service:
            name: metrics
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - metrics.k0s.io
    - '*.metrics.k0s.io'
    secretName: metrics.k0s.io
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: metrics
  name: metrics
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: metrics
  type: ClusterIP
